test(git): expand test suite to cover auto-stash and rebase skip scenarios